K8S-deployment/istio-playgroud/ingress-gw-demo/kuard-443-ingress-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kuard
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kuard-credential # must be the same as secret
    hosts:
    - "*"
