K8S-deployment/istio-playgroud/ingress-gw-demo/kuard-80-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kuard
spec:
  hosts:
  - "kuard.example.com"
  gateways:
  - kuard-gateway
  http:
  - match:
    route:
    - destination:
        port:
          number: 8080
        host: kuard
